--- a/statistika.ipynb
+++ b/statistika.ipynb
@@ -304,7 +304,7 @@
     "\n",
     "plt.title(f\"Boxplot of {values} for {classes}\", fontsize=20)\n",
     "\n",
-    "plt.savefig('boxplots.png', bbox_inches='tight')\n",
+    "plt.savefig('boxplots.png', bbox_inches='tight', transparent=False)\n",
     "plt.show()"
    ]
   },
