--- a/statistika.ipynb
+++ b/statistika.ipynb
@@ -312,7 +312,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[download image here](boxplots.png)"
+    "[download image here](boxplots.png)\n",
+    "\n",
+    "Alternatively, just copy the image directly from the browser with mouse click."
    ]
   },
   {
