--- a/statistika_est.ipynb
+++ b/statistika_est.ipynb
@@ -6,13 +6,13 @@
     "id": "pLBvTp_PCPgx"
    },
    "source": [
-    "# Landscape Ecology\n",
+    "Maastikuökoloogia\n",
     "\n",
     "__Evelyn Uuemaa, PhD__\n",
     "\n",
-    "- Course supplement\n",
+    "- Praktikumi lisa\n",
     "\n",
-    "    Students upload a csv file and can do box-plots based on the file. They are then also able to download the images for reporting."
+    "    Tudengid laevad üles oma CSV-faili ja saavad selle põhjal teha karpdiagrammid. Ühtlasi saavad nad tulemuse aruande jaoks pildifailina alla laadida."
    ]
   },
   {
@@ -21,9 +21,9 @@
     "id": "dU09-eocCPg5"
    },
    "source": [
-    "## How to use this notebook\n",
+    "## Kuidas seda skripti kasutada\n",
     "\n",
-    "Highlight the top cell and click the \"Run\" button to execute the cells and move the program forward. If anything goes wrong, you can easily restart from the beginning."
+    "Mine hiirega kõige esimesele kastile ja vajuta \"Run\" nuppu, et üksus läbi jooksutada ja minna järgmiste plokkide juurde. Kui midagi valesti läheb, saad sa lihtsasti uuesti algusest alustada."
    ]
   },
   {
@@ -44,6 +44,15 @@
     "sns.set_theme(style=\"whitegrid\")\n",
     "\n",
     "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "lJccJDl1XdbV"
+   },
+   "source": [
+    "Ülejärgmise ploki juures tuleb sul arvutist valida äsja salvestatud CSV-fail. Kui sinu CSV-faili eraldusmärgiks on koma, pole vaja midagi muuta. Kui aga semikoolon, tee muutus järgmises plokis: csv_delimiter = \";\"."
    ]
   },
   {
@@ -68,13 +77,13 @@
      "base_uri": "https://localhost:8080/",
      "height": 49,
      "referenced_widgets": [
-      "1121b6bb4c684ea3bc98d7954bb282f9",
-      "ca4e78308c6e429ea8d63198fa38c4fb",
-      "eaad029d3e6b4c589b38cdbb72401785"
+      "6e46c25162df4527beb38433584f5e60",
+      "2c4afd8f8cd14eba8b00c0824a10449f",
+      "bf3478b81e0446dd9ab2ecf79142cece"
      ]
     },
     "id": "BjDuXlkECPg9",
-    "outputId": "43a4ef7d-88ee-4013-af00-5ba18689f22f"
+    "outputId": "8b0686de-1914-499a-b34a-17a65992fb1d"
    },
    "outputs": [],
    "source": [
@@ -87,9 +96,9 @@
     "id": "EGNME6bpCPg_"
    },
    "source": [
-    "After you selected the file, the upload field should show (1), that means the file is now selected.\n",
+    "Kui oled faili oma arvutist valinud, peaks üleslaadimise lahter näitama \"Upload (1)\", mis tähendab, et fail on nüüd valitud.\n",
     "\n",
-    "Click on the _next cell_ to continue..."
+    "Jooksuta läbi järgmine plokk. Tulemuseks peaks olema ilus tabel, mitte ühes jorus tekst. Kui näed väärtuste vahel semikooloneid (;), tuleb teises plokis teha parandus (csv_delimiter = \";\")."
    ]
   },
   {
@@ -98,10 +107,10 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
-     "height": 359
+     "height": 549
     },
     "id": "UIpA7Dx6CPhA",
-    "outputId": "2157e166-ff29-4adb-b47a-69cc6c156529"
+    "outputId": "6c6d348d-554e-4036-d2ca-6b869840f9f0"
    },
    "outputs": [],
    "source": [
@@ -123,7 +132,9 @@
     "id": "G3G7rVvLCPhB"
    },
    "source": [
-    "Now we have the data loaded into the dataframe and we can run the statistics and plots. In the following cell configure the names of the class column and the value columns."
+    "Nüüd on andmed loetud *dataframe*-formaati ja me saame arvutada statistikuid ning teha jooniseid. Muuda järgmises plokis muutuja \"classes\" väärtust, kui sul on see tulp mõne teise nimega kui \"Liik\" (nt \"liik\"). Seejärel jooksuta järgmist plokki, et saada karpvurrdiagramm.\n",
+    "\n",
+    "Iga järgmise näitajaga joonise tegemiseks muuda siin ka \"values\" väärtust (nt values = \"SEI\", values = \"AWMSI\" jne)."
    ]
   },
   {
@@ -148,7 +159,7 @@
      "height": 904
     },
     "id": "1ZoHRp_BCPhB",
-    "outputId": "9108106d-25a1-4baa-d8ae-84b598044502"
+    "outputId": "bb93fb4d-b43b-4920-e005-021cd0e05ac0"
    },
    "outputs": [],
    "source": [
@@ -173,15 +184,15 @@
     "id": "oU1U5pMxCPhC"
    },
    "source": [
-    "[download image here](boxplots.png)\n",
+    "[lae joonis alla siit](boxplots.png)\n",
     "\n",
-    "Alternatively, just copy the image directly from the browser with mouse click."
+    "Alternatiivina võid ka pildi lihtsalt otse kopeerida, vajutades hiire parema klõpsuga pildil."
    ]
   }
  ],
  "metadata": {
   "colab": {
-   "name": "statistika.ipynb",
+   "name": "statistika_est.ipynb",
    "provenance": []
   },
   "kernelspec": {
@@ -203,7 +214,22 @@
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
-    "1121b6bb4c684ea3bc98d7954bb282f9": {
+    "2c4afd8f8cd14eba8b00c0824a10449f": {
+     "model_module": "@jupyter-widgets/controls",
+     "model_name": "ButtonStyleModel",
+     "state": {
+      "_model_module": "@jupyter-widgets/controls",
+      "_model_module_version": "1.5.0",
+      "_model_name": "ButtonStyleModel",
+      "_view_count": null,
+      "_view_module": "@jupyter-widgets/base",
+      "_view_module_version": "1.2.0",
+      "_view_name": "StyleView",
+      "button_color": null,
+      "font_weight": ""
+     }
+    },
+    "6e46c25162df4527beb38433584f5e60": {
      "model_module": "@jupyter-widgets/controls",
      "model_name": "FileUploadModel",
      "state": {
@@ -226,35 +252,20 @@
       "disabled": false,
       "error": "",
       "icon": "upload",
-      "layout": "IPY_MODEL_eaad029d3e6b4c589b38cdbb72401785",
+      "layout": "IPY_MODEL_bf3478b81e0446dd9ab2ecf79142cece",
       "metadata": [
        {
-        "lastModified": 1609841706334,
-        "name": "linnud_stats.csv",
-        "size": 13956,
+        "lastModified": 1609941151011,
+        "name": "maastikuindeksid_csv_koma.csv",
+        "size": 24556,
         "type": "application/vnd.ms-excel"
        }
       ],
       "multiple": false,
-      "style": "IPY_MODEL_ca4e78308c6e429ea8d63198fa38c4fb"
+      "style": "IPY_MODEL_2c4afd8f8cd14eba8b00c0824a10449f"
      }
     },
-    "ca4e78308c6e429ea8d63198fa38c4fb": {
-     "model_module": "@jupyter-widgets/controls",
-     "model_name": "ButtonStyleModel",
-     "state": {
-      "_model_module": "@jupyter-widgets/controls",
-      "_model_module_version": "1.5.0",
-      "_model_name": "ButtonStyleModel",
-      "_view_count": null,
-      "_view_module": "@jupyter-widgets/base",
-      "_view_module_version": "1.2.0",
-      "_view_name": "StyleView",
-      "button_color": null,
-      "font_weight": ""
-     }
-    },
-    "eaad029d3e6b4c589b38cdbb72401785": {
+    "bf3478b81e0446dd9ab2ecf79142cece": {
      "model_module": "@jupyter-widgets/base",
      "model_name": "LayoutModel",
      "state": {
@@ -309,5 +320,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 1
 }
