--- a/statistika_ruumianalyys.ipynb
+++ b/statistika_ruumianalyys.ipynb
@@ -185,7 +185,7 @@
    ]
   },
   {
-   "cell_type": "code",
+   "cell_type": "markdown",
    "execution_count": null,
    "id": "243dbd05-8b7d-4506-a0bb-8a94be54fd03",
    "metadata": {},
@@ -224,7 +224,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Tulemuste tõlgendamine\n",
+    "**Tulemuste tõlgendamine**\n",
     "\n",
     "Nullhüpotees: kahe rühma jaotus on sarnane\n",
     "\n",
